--- a/page1.css
+++ b/page1.css
@@ -135,7 +135,7 @@ a {
     .navbar{
         display: flex;
         flex-direction: column;
-        margin-bottom:40px ;
+        padding-bottom:40px ;
     }
     .logo-menu{
         display: flex;
